# rust-template-godot

./: README.md
rust/: Cargo.toml
rust-template/: Player.tscn  bevy_app_singleton.tscn  godot-rust.png.import  main.tscn  project.godot  rust.gdextension
rust-template/assets/art/: monochrome_tilemap_transparent.png.import
rust-template/assets/audio/: actiontheme-v3.ogg.import  annoyingwaltz.wav.import  gem.wav.import  jump.wav.import
rust-template/assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
rust-template/assets/music/: time_for_adventure.mp3.import
rust-template/assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
rust-template/assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
rust-template/brackeys_platformer_assets/fonts/: PixelOperator8-Bold.ttf.import  PixelOperator8.ttf.import
rust-template/brackeys_platformer_assets/music/: time_for_adventure.mp3.import
rust-template/brackeys_platformer_assets/sounds/: coin.wav.import  explosion.wav.import  hurt.wav.import  jump.wav.import  power_up.wav.import  tap.wav.import
rust-template/brackeys_platformer_assets/sprites/: coin.png.import  fruit.png.import  knight.png.import  platforms.png.import  slime_green.png.import  slime_purple.png.import  world_tileset.png.import
rust-template/scenes/: main.tscn
rust-template/scenes/levels/: level_1.tscn  level_2.tscn  level_3.tscn  main_menu.tscn
rust/src/: components.rs  level_manager.rs  lib.rs  main_menu.rs  player.rs  scene_management.rs
rust/src/gameplay/: audio.rs  door.rs  gem.rs  hud.rs  mod.rs  player.rs
(+4 files in other folders)
