[package]
name = "rust"
version = "1.0.0"
edition = "2024"
license = "MIT"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
godot = "0.3.2"
godot-bevy = { git = "https://github.com/bytemeadow/godot-bevy", branch = "main" }
bevy = { version = "0.16.1", default-features = false }

[lib]
crate-type = ["cdylib"] # Compile this crate to a dynamic C library.
